python-app/template/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: testdid15/python-app:v2
          ports:
            - containerPort: 5000
