python-app/template/k8s/envoy-complete.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: my-custom-proxy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: python
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80 # The "Front Door" of the Gateway
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-app-route
  namespace: python
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - "python-app.test.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: python-service # Ensure this matches your Service name
          port: 8080           # Ensure this matches your Service port
